--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,5 @@
 
 {
-  "luau-lsp.fflags.override": {
-    "LuauSolverV2": "true",
-    "DebugLuauDeferredConstraintResolution": "true"
-  },
   "code-runner.executorMap": {
     "javascript": "node",
     "java": "cd $dir && javac $fileName && java $fileNameWithoutExt",
@@ -63,6 +59,10 @@
     "spwn": "spwn build",
     "pkl": "cd $dir && pkl eval -f yaml $fileName -o $fileNameWithoutExt.yaml",
     "gleam": "gleam run -m $fileNameWithoutExt"
+  },
+  "luau-lsp.fflags.override": {
+    "LuauTypeSolverRelease": "646",
+    "LuauSolverV2": "true"
   },
   "luau-lsp.require.mode": "relativeToFile",
   "luau-lsp.require.directoryAliases": {
